--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 <ul>
 <li><p>My name is Arinjay Dasbhadra</p>
 </li>
-<li><p>I am a good boy</p>
-</li>
-<li><p>I am an Indian</p>
+<li><p>My address is :<br>
+  House no :39, Grand Village, Mattumanda, Palakkad, Kerala, India, Indian Subcontinent, Asia , Earth, Solarsystem, Milkyway, Local Group of Galaxies, Universe, etc...<br>
+Pin Code: 678005</p>
 </li>
 <li><p>I am 12+ years old</p>
 </li>
-<li><p>I study in a school called Kendriya Vidyalaya Kanjikode</p>
+<li><p>I study in a school called PM SHRI Kendriya Vidyalaya Kanjikode</p>
 </li>
 <li><p>My parents work in an institute called Indian Institute Of India Palakkad</p>
 </li>
@@ -65,7 +65,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
 </li>
 <li><p>Ford Raptor, and Buggati Bloide are my favourite cars</p>
 </li>
-<li><p>I want to be a scientist when I grow up. (My favourite job: scientist)</p>
+<li><p>I want to be an car designer, manufacturer, and seller or I want to become an author and additionally a toy and book collector when I grow up.(I will probably decide later on) (My favourite job)</p>
 </li>
 </ul>
 
