--- a/paintings.html
+++ b/paintings.html
@@ -33,7 +33,10 @@
 <img src="ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
 <img src="ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
-<img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr></td>  
+<img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
+  <img src="car drawing.jfif" alt="alt text"/>&nbsp;</tr>
+
+</td>  
   
 </body>
 </html>
