--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Pin Code: 678005</p>
 </li>
 <li><p>I am 12+ years old</p>
 </li>
-<li><p>I study in a school called PM SHRI Kendriya Vidyalaya Kanjikode</p>
+<li><p>I study in a school called PM SHRI Kendriya Vidyalaya Kanjikode in class 7C</p>
 </li>
 <li><p>My parents work in an institute called Indian Institute Of India Palakkad</p>
 </li>
