--- a/paintings.html
+++ b/paintings.html
@@ -34,7 +34,7 @@
 <img src="ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
 <img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
-  <img src="car drawing.jfif" alt="alt text"/>&nbsp;</tr>
+  <img src="car drawing.jfif" alt="alt text" height="220px" width="150px" />&nbsp;</tr>
 
 </td>  
   
