--- a/index.html
+++ b/index.html
@@ -45,9 +45,12 @@ Pin Code: 678005</p>
 <li><p>My parents work in an institute called Indian Institute Of India Palakkad</p>
 </li>
 </ul>
-  <h2 style="background-color:Cyan;">About Myself</h2>
+  <h2 style="background-color:Cyan;">My Family</h2>
 <ul>
-  
+  <table class="imgtable"><tr><td>
+<img src="ArinjayDasbhadra.jpg" alt="alt text" width="300px" height="100px" />&nbsp;</tr> 
+
+</td>  
 </ul>
  
 
