--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@ Pin Code: 678005</p>
   <h2 style="background-color:Cyan;">My Family</h2>
 <ul>
   <table class="imgtable"><tr><td>
-<img src="ArinjayDasbhadra.jpg" alt="alt text" width="300px" height="100px" />&nbsp;</tr> 
+<img src="ArinjayDasbhadra.jpg" alt="alt text" width="300px" height="100px" />&nbsp;</tr>
+    <li><p>The first person to the left is my mother. Her name is Sahely Bhadra</p>
+</li>
+<li><p>The second person to the left is myself. My name is Arinjay Dasbhadra</p>
+</li>
+<li><p>The first person to the right is my father. His name is Mrinal Kanti Das</p>
+</li>
+    <li><p>The second person to the right is my younger sister. Her name is Arinya Dasbhadra</p>
+</li>
 
 </td>  
 </ul>
