--- a/index.html
+++ b/index.html
@@ -47,24 +47,7 @@ Pin Code: 678005</p>
 </ul>
   <h2 style="background-color:Cyan;">My Family</h2>
 <ul>
-  <table class="imgtable"><tr><td>
-<img src="ArinjayDasbhadra.jpg" alt="alt text" width="300px" height="100px" />&nbsp;</tr>
-    <li><p>The first person to the left is my mother. Her name is Sahely Bhadra</p>
-</li>
-<li><p>The second person to the left is myself. My name is Arinjay Dasbhadra</p>
-</li>
-<li><p>The first person to the right is my father. His name is Mrinal Kanti Das</p>
-</li>
-    <li><p>The second person to the right is my younger sister. Her name is Arinya Dasbhadra</p>
-</li>
-
-</td>  
-</ul>
- 
-
-  
- 
-<h2 style="background-color:yellow;">My Favourites</h2>
+  <h2 style="background-color:yellow;">My Favourites</h2>
 <ul>
 <li><p>Rabbits and Tigers is my favourite animals</p>
 </li>
@@ -108,6 +91,20 @@ Pin Code: 678005</p>
 </li>
 <li><p>If you liked my games and stuff that I made in Scratch then look in the link<a href="https://scratch.mit.edu/users/griffpatch/"> Griffpatch Coder in Scratch</a></p>
 </li>
+</ul>
+
+  <table class="imgtable"><tr><td>
+<img src="Me and my family.jpg" alt="alt text" width="300px" height="100px" />&nbsp;</tr>
+    <li><p>The first person to the left is my mother. Her name is Sahely Bhadra</p>
+</li>
+<li><p>The second person to the left is myself. My name is Arinjay Dasbhadra</p>
+</li>
+<li><p>The first person to the right is my father. His name is Mrinal Kanti Das</p>
+</li>
+    <li><p>The second person to the right is my younger sister. Her name is Arinya Dasbhadra</p>
+</li>
+
+</td>  
 </ul>
  
   
