--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html" class="current">Home</a></div>
-<div class="menu-item"><a href="paintings.html">Paintings</a></div>
+<div class="menu-item"><a href="paintings.html">Art and Craft</a></div>
 <div class="menu-item"><a href="stories.html">Stories</a></div>
 <div class="menu-item"><a href="codings.html">Codings</a></div>
 </td>
