--- a/paintings.html
+++ b/paintings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Paintings</title>
+<title>Art and Craft</title>
 </head>
 <body style="background-color:Chartreuse;">
 <div id="fwtitle">
@@ -12,7 +12,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="paintings.html" class="current">Paintings</a></div>
+<div class="menu-item"><a href="paintings.html" class="current">Art and Craft</a></div>
 <div class="menu-item"><a href="stories.html">Stories</a></div>
 <div class="menu-item"><a href="codings.html">Codings</a></div>  
 </td>
@@ -23,7 +23,7 @@
 <td align="left">
 <p><br />
 
-<p style="font-size:50px;">Paintings Painted By Me</p>
+<p style="font-size:50px;">Art and Craft Done By Me</p>
 <br/></p>
   
   
