--- a/stories.html
+++ b/stories.html
@@ -13,7 +13,7 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-item"><a href="index.html">Home</a></div>
-<div class="menu-item"><a href="paintings.html">Paintings</a></div>
+<div class="menu-item"><a href="paintings.html">Art and Craft</a></div>
 <div class="menu-item"><a href="stories.html" class="current">Stories</a></div>
 <div class="menu-item"><a href="codings.html">Codings</a></div>  
 </td>
