--- a/paintings.html
+++ b/paintings.html
@@ -35,6 +35,12 @@
 <img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
 <img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
   <img src="car drawing.jfif" alt="alt text" height="220px" width="150px" />&nbsp;</tr>
+  <img src="Mountain.jpg" alt="alt text" width="150" height="220px" />&nbsp;</tr> 
+<img src="Pokemon.jpg" alt="alt text" width="150px" height="160px" />&nbsp;</tr>
+<img src="Porshe.jpg" alt="alt text" width="450px" height="150px" />&nbsp;</tr> 
+<img src="rifting Mazda.jpg" alt="alt text" width="300px" height="150px" />&nbsp;</tr>
+  <img src="Scenary.jpg" alt="alt text" height="220px" width="150px" />&nbsp;</tr>
+
 
 </td>  
   
