--- a/paintings.html
+++ b/paintings.html
@@ -39,7 +39,7 @@
 <img src="Pokemon.jpg" alt="alt text" width="150px" height="160px" />&nbsp;</tr>
 <img src="Porshe.jpg" alt="alt text" width="450px" height="150px" />&nbsp;</tr> 
 <img src="rifting Mazda.jpg" alt="alt text" width="300px" height="150px" />&nbsp;</tr>
-  <img src="Scenary.jpg" alt="alt text" height="220px" width="150px" />&nbsp;</tr>
+  <img src="Scenary.jpg" alt="alt text" width="220px" height="150px" />&nbsp;</tr>
 
 
 </td>  
