--- a/paintings.html
+++ b/paintings.html
@@ -40,6 +40,10 @@
 <img src="Porshe.jpg" alt="alt text" width="450px" height="150px" />&nbsp;</tr> 
 <img src="rifting Mazda.jpg" alt="alt text" width="300px" height="150px" />&nbsp;</tr>
   <img src="Scenary.jpg" alt="alt text" width="220px" height="150px" />&nbsp;</tr>
+   <img src="Mountain.jpg" alt="alt text" width="150" height="220px" />&nbsp;</tr> 
+<img src="Pokemon.jpg" alt="alt text" width="150px" height="160px" />&nbsp;</tr>
+<img src="Porshe.jpg" alt="alt text" width="450px" height="150px" />&nbsp;</tr> 
+<img src="rifting Mazda.jpg" alt="alt text" width="300px" height="150px" />&nbsp;</tr>
 
 
 </td>  
