Update How Medicine Works in Human Body? | How Your Body Process Medicine? |.html

--- a/How Medicine Works in Human Body? | How Your Body Process Medicine? |.html
+++ b/How Medicine Works in Human Body? | How Your Body Process Medicine? |.html
@@ -16,19 +16,22 @@
 </td>
   <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="oster 200x125.jpg" alt="alt text" width="200px" height="125px" />&nbsp;</td>
+<img src="Oshud.jpg" alt="alt text" width="200px" height="200px" />&nbsp;</td>
 <td align="left">
 <p><br />
 
-<p style="font-size:50px;">How do oysters make pearls</p>
+<p style="font-size:50px;">How Medicine Works in Human Body? How Your Body Process Medicine?</p>
 <br/></p>
   
   
 </td></tr></table>
 
-  <p>The formation of a natural pearl begins when a foreign substance slips into the oyster between the mantle and the shell, which irritate­s the mantle. It's kind of like the oyster getting a splinter. The oyster's natural reaction is to cover up that irritant to protect itself. The man­tle covers the irritant with layers of the same nacre substance that is used to create the shell. This eventually forms a pearl.<br>So a pearl is a foreign substance covered with layers of nacre. Most pearls that we see in jewelry stores are nicely rounded objects, which are the most valuable ones.<br>Not all pearls turn out so well. Some pearls form in an uneven shape these are called baroque pearls. Pearls, as you've probably noticed, come in a variety of various colors, including white, black, gray, red, blue and green.<br> Most pearls can be found all over the world, but black pearls are indigenous to the South Pacific.</p>
+  <p style="text-align:justify;"><>Medicine is the science and practice of caring for a patient, managing the diagnosis, prognosis, prevention, treatment, palliation of their injury or disease, and promoting their health.<br>
+    Medicine encompasses a variety of health care practices evolved to maintain and restore health by the prevention and treatment of illness.<br>
+    Contemporary medicine applies biomedical sciences, biomedical research, genetics, and medical technology to diagnose, treat, and prevent injury and disease, typically through pharmaceuticals or surgery,<br>
+    but also through therapies as diverse as psychotherapy, external splints and traction, medical devices, biologics, and ionizing radiation, amongst others.</p>
  
-<iframe width="560" height="315" src="https://www.youtube.com/embed/mwR5WXmY3Yc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/watch?v=1dtraWLEy38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <!--
   <video width="400" controls>
   <source src="mov_bbb.webm" type="video/webm">
@@ -39,7 +42,7 @@
   
 <p>
 Video courtesy of 
-<a href="https://www.youtube.com/watch?v=mwR5WXmY3Yc" target="_blank">how do oysters make pearls</a>.
+<a href="https://www.youtube.com/watch?v=1dtraWLEy38" target="_blank">How Medicine Works in Human Body? How Your Body Process Medicine?</a>.
 </p>
   -->
  
