--- a/How Medicine Works in Human Body? | How Your Body Process Medicine? |.html
+++ b/How Medicine Works in Human Body? | How Your Body Process Medicine? |.html
@@ -29,7 +29,8 @@
   <p style="text-align:justify;"><>Medicine is the science and practice of caring for a patient, managing the diagnosis, prognosis, prevention, treatment, palliation of their injury or disease, and promoting their health.<br>
     Medicine encompasses a variety of health care practices evolved to maintain and restore health by the prevention and treatment of illness.<br>
     Contemporary medicine applies biomedical sciences, biomedical research, genetics, and medical technology to diagnose, treat, and prevent injury and disease, typically through pharmaceuticals or surgery,<br>
-    but also through therapies as diverse as psychotherapy, external splints and traction, medical devices, biologics, and ionizing radiation, amongst others.</p>
+    but also through therapies as diverse as psychotherapy, external splints and traction, medical devices, biologics, and ionizing radiation, amongst others.<br>
+  Make sure you watch the whole video to know all the answers to your curious questions! </p>
  
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=1dtraWLEy38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <!--
