--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ Pin Code: 678005</p>
 </li>
 <li><p><a href="cats.html">How do cats survive massive falls</a></p>
 </li>
+  <li><p><a href="Medicine.html">How do cats survive massive falls</a></p>
+</li>
 </ul>
 
   
