--- a/Medicine.html
+++ b/Medicine.html
@@ -30,7 +30,16 @@
     Medicine encompasses a variety of health care practices evolved to maintain and restore health by the prevention and treatment of illness.<br>
     Contemporary medicine applies biomedical sciences, biomedical research, genetics, and medical technology to diagnose, treat, and prevent injury and disease, typically through pharmaceuticals or surgery,<br>
     but also through therapies as diverse as psychotherapy, external splints and traction, medical devices, biologics, and ionizing radiation, amongst others.<br>
-  Make sure you watch the whole video to know all the answers to your curious questions! </p>
+  Make sure you watch the whole video to know all the answers to your curious questions! <br>
+  Here's what happens when you take a pill:<br> 
+1. Dissolution: The pill dissolves in your stomach.<br> 
+2. Absorption: The body absorbs the medicine from your stomach into your bloodstream. The amount absorbed depends on the route of administration and the medicine's molecular properties.<br> 
+3. Distribution: The blood distributes the medicine throughout your body.<br> 
+4. Metabolism: The body sees medicines as foreign substances that need to be removed, and metabolism usually inactivates the medicine.<br>
+    However, many medicines are inactive when you swallow them, so your liver chemically changes them into an active form that your body can use.<br> 
+5. Target binding: The activated medication travels through your organs until it reaches a target receptor, which may be on the cell surface, in the liquid outside, or even in the cell center (nucleus).<br>
+    The drug molecule attaches to the receptor, much like a key fits into a lock, and this triggers a response in the cell. This response can either turn on (stimulation) or turn off (inhibition) an effect,<br>
+    which affects cellular activity. </p>
  
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=1dtraWLEy38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <!--
