--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ Pin Code: 678005</p>
                                     
 <h2><p style="background-color:Aquamarine;">Interesting Learning</p></h2>
 <ul>
-<li><p><a href="oyster.html">How do oysters make pearls</a></p>
+<li><p><a href="oyster.html">How do oysters make pearls?</a></p>
 </li>
-<li><p><a href="bird.html">How do birds fly</a></p>
+<li><p><a href="bird.html">How do birds fly?</a></p>
 </li>
-<li><p><a href="cats.html">How do cats survive massive falls</a></p>
+<li><p><a href="cats.html">How do cats survive massive falls?</a></p>
 </li>
-  <li><p><a href="Medicine.html">How do cats survive massive falls</a></p>
+  <li><p><a href="Medicine.html">How Medicine Works in Human Body? How Your Body Process Medicine?</a></p>
 </li>
 </ul>
 
