--- a/Medicine.html
+++ b/Medicine.html
@@ -39,7 +39,8 @@
     However, many medicines are inactive when you swallow them, so your liver chemically changes them into an active form that your body can use.<br> 
 5. Target binding: The activated medication travels through your organs until it reaches a target receptor, which may be on the cell surface, in the liquid outside, or even in the cell center (nucleus).<br>
     The drug molecule attaches to the receptor, much like a key fits into a lock, and this triggers a response in the cell. This response can either turn on (stimulation) or turn off (inhibition) an effect,<br>
-    which affects cellular activity. </p>
+    which affects cellular activity.<br>
+   Make sure you watch the whole video to know all the answers to your curious questions! </p>
  
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=1dtraWLEy38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <!--
