--- a/paintings.html
+++ b/paintings.html
@@ -44,6 +44,10 @@
 <img src="Transformer.jpg" alt="alt text" width="150px" height="165px" />&nbsp;</tr>
 <img src="waterfall 2.jpg" alt="alt text" width="150px" height="220px" />&nbsp;</tr> 
 <img src="Waterfall.jpg" alt="alt text" width="150px" height="220px" />&nbsp;</tr>
+   <img src="dollcraft.jpg" alt="alt text" width="180" height="150px" />&nbsp;</tr> 
+<img src="flower.jpg" alt="alt text" width="180px" height="155px" />&nbsp;</tr>
+<img src="pumpkin.jpg" alt="alt text" width="180px" height="155px" />&nbsp;</tr> 
+<img src="Rabbit.jpg" alt="alt text" width="180px" height="160px" />&nbsp;</tr>
 
 
 </td>  
