--- a/Medicine.html
+++ b/Medicine.html
@@ -41,7 +41,9 @@
     The drug molecule attaches to the receptor, much like a key fits into a lock, and this triggers a response in the cell. This response can either turn on (stimulation) or turn off (inhibition) an effect,<br>
     which affects cellular activity.<br>
    Make sure you watch the whole video to know all the answers to your curious questions! </p>
- 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mwR5WXmY3Yc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=1dtraWLEy38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   <!--
   <video width="400" controls>
