--- a/Medicine.html
+++ b/Medicine.html
@@ -42,6 +42,8 @@
     which affects cellular activity.<br>
    Make sure you watch the whole video to know all the answers to your curious questions! </p>
 
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/1dtraWLEy38?si=w74_TzSycE_1h_W-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  
 <iframe width="560" height="315" src="https://www.youtube.com/embed/mwR5WXmY3Yc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <iframe width="560" height="315" src="https://www.youtube.com/watch?v=1dtraWLEy38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
