--- a/paintings.html
+++ b/paintings.html
@@ -37,7 +37,7 @@
              id="img1" />
         <br /><br /><br />
         <!-- Button to reset the Image size -->
-        <button onclick="resetImg()">Reset</button>
+        <button onclick="resetImg()">Escape</button>
     </div>
 
     <!-- script to set display property -->
