--- a/paintings.html
+++ b/paintings.html
@@ -32,7 +32,7 @@
                                   margin-top: 5em;">
         <!-- Image to be enlarged and onclick() function call-->
         <img src=
-"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()"
+"ArinjayDasbhadra.jpg" alt="alt text"             onclick="enlargeImg()"
              id="img1" />
         <br /><br /><br />
         <!-- Button to reset the Image size -->
@@ -46,7 +46,7 @@
         // Function to increase image size
         function enlargeImg() {
             // Set image size to 1.5 times original
-            img.style.transform = "scale(1.5)";
+            img.style.transform =width="200px" height="150px" ;
             // Animation effect
             img.style.transition = "transform 0.25s ease";
         }
