--- a/paintings.html
+++ b/paintings.html
@@ -32,7 +32,7 @@
                                   margin-top: 5em;">
         <!-- Image to be enlarged and onclick() function call-->
         <img src=
-"ArinjayDasbhadra.jpg" alt="alt text"             onclick="enlargeImg()"
+"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"            onclick="enlargeImg()"
              id="img1" />
         <br /><br /><br />
         <!-- Button to reset the Image size -->
@@ -45,8 +45,8 @@
         img = document.getElementById("img1");
         // Function to increase image size
         function enlargeImg() {
-            // Set image size to 1.5 times original
-            img.style.transform =width="200px" height="150px" ;
+            // Set image size to 5 times original
+            img.style.transform = "scale(5)";
             // Animation effect
             img.style.transition = "transform 0.25s ease";
         }
