--- a/paintings.html
+++ b/paintings.html
@@ -36,7 +36,9 @@
              id="img1" />
         <br /><br /><br />
         <!-- Button to reset the Image size -->
-        <button onclick="resetImg()">Escape</button>
+        <img src=
+          "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" onclick="resetImg()"
+          id="img1">
     </div>
 
     <!-- script to set display property -->
