--- a/paintings.html
+++ b/paintings.html
@@ -35,7 +35,7 @@
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"            onclick="enlargeImg()"
              id="img1" />
         <br /><br /><br />
-        <!-- Button to reset the Image size -->
+        <!-- Image to be reset and onclick() function call-->
         <img src=
           "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" onclick="resetImg()"
           id="img1">
