--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Pin Code: 678005</p>
 </li>
 <li><p><a href="cats.html">How do cats survive massive falls?</a></p>
 </li>
-  <li><p><a href="Medicine.html">How Medicine Works in Human Body? How Your Body Process Medicine?</a></p>
+  <li><p><a href="Medicine.html">How Medicine Works in Human Body? How Our Body Process Medicine?</a></p>
 </li>
 </ul>
 
