--- a/Medicine.html
+++ b/Medicine.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>How Medicine Works in Human Body? How Your Body Process Medicine?</title>
+<title>How Medicine Works in Human Body? How Our Body Process Medicine?</title>
 </head>
 <body style="background-color:#fc7526;">
 <div id="fwtitle">
