--- a/Medicine.html
+++ b/Medicine.html
@@ -20,7 +20,7 @@
 <td align="left">
 <p><br />
 
-<p style="font-size:50px;">How Medicine Works in Human Body? How Your Body Process Medicine?</p>
+<p style="font-size:50px;">How Medicine Works in Human Body? How Our Body Process Medicine?</p>
 <br/></p>
   
   
