--- a/paintings.html
+++ b/paintings.html
@@ -28,8 +28,8 @@
   
   
 </td></tr></table>
- <div class="container"; 
-                                  margin-top: 20em;">
+ <div class="container" style="text-align: center; 
+                                  margin-top: 5em;">
         <!-- Image to be enlarged and onclick() function call-->
         <img src=
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()"
@@ -37,7 +37,7 @@
         <br /><br /><br /><br /><br /><br />
 
         <!-- Button to reset the Image size -->
-        <button onclick="resetImg()">Reset</button>
+        <button onclick="resetImg()">Escape</button>
     </div>
 
     <!-- script to set display property -->
