--- a/Medicine.html
+++ b/Medicine.html
@@ -26,7 +26,7 @@
   
 </td></tr></table>
 
-  <p style="text-align:justify;"><>Medicine is the science and practice of caring for a patient, managing the diagnosis, prognosis, prevention, treatment, palliation of their injury or disease, and promoting their health.<br>
+  <p style="text-align:justify;">Medicine is the science and practice of caring for a patient, managing the diagnosis, prognosis, prevention, treatment, palliation of their injury or disease, and promoting their health.<br>
     Medicine encompasses a variety of health care practices evolved to maintain and restore health by the prevention and treatment of illness.<br>
     Contemporary medicine applies biomedical sciences, biomedical research, genetics, and medical technology to diagnose, treat, and prevent injury and disease, typically through pharmaceuticals or surgery,<br>
     but also through therapies as diverse as psychotherapy, external splints and traction, medical devices, biologics, and ionizing radiation, amongst others.<br>
