--- a/bird.html
+++ b/bird.html
@@ -36,7 +36,8 @@ a rigid skeleton to provide firm attachments for powerful flight muscles – thi
 a streamlined body – this helps reduce the force of drag<br>
 wings – these enable the force of lift.<br> 
 how does it work:<br>
-Birds' wings flap with an up-and-down motion. This propels them forward. The entire wingspan has to be at the right angle of attack,<br>which means the wings have to twist (and do so automatically) with each downward stroke to keep aligned with the direction of travel
+Birds' wings flap with an up-and-down motion. This propels them forward. The entire wingspan has to be at the right angle of attack,<br>
+  which means the wings have to twist (and do so automatically) with each downward stroke to keep aligned with the direction of travel<br />
 <iframe width="560" height="315" src="https://www.youtube.com/embed/cgO07y9JIIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
  <!--
   <video width="400" controls>
