--- a/paintings.html
+++ b/paintings.html
@@ -35,8 +35,9 @@
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()"
              id="img1" />
         <!-- Button to reset the Image size -->
-        <button onclick="resetImg()">Escape</button>
+        <button onclick="resetImg()" class="btn btn-secondary float-right mr-10">Escape</button>
     </div>
+  
 
     <!-- script to set display property -->
     <script>
