--- a/paintings.html
+++ b/paintings.html
@@ -35,7 +35,7 @@
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()"
              id="img1" />
         <!-- Button to reset the Image size -->
-        <button onclick="resetImg()" class="btn btn-secondary float-right mr-10">Escape</button>
+        <button onclick="resetImg()" class="btn btn-secondary float-left mr-10">Escape</button>
     </div>
   
 
