--- a/paintings.html
+++ b/paintings.html
@@ -32,10 +32,10 @@
                                   margin-top: 5em;">
         <!-- Image to be enlarged and onclick() function call-->
         <img src=
-"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()"
+"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()" class="btn btn-secondary float-right mr-10000"
              id="img1" />
         <!-- Button to reset the Image size -->
-        <button onclick="resetImg()" class="btn btn-secondary float-left mr-10">Escape</button>
+        <button onclick="resetImg()">Escape</button>
     </div>
   
 
