--- a/bird.html
+++ b/bird.html
@@ -15,7 +15,7 @@
 </td>
 <td id="layout-content">
 <table class="imgtable"><tr><td>
-<img src="bird.png" alt="alt text" width="200px" height="175px" />&nbsp;</td>
+<img src="parrot.jpg" alt="alt text" width="184px" height="242px" />&nbsp;</td>
 <td align="left">
 <p><br />
 
