--- a/bird.html
+++ b/bird.html
@@ -26,7 +26,7 @@
 </td></tr></table>
 
 <p>Physical features<br>
-Flying birds have:<br>
+Flying birds have:<br><br>
 
 lightweight, smooth feathers – this reduces the forces of weight and drag<br>
 a beak, instead of heavy, bony jaws and teeth – this reduces the force of weight<br>
