--- a/paintings.html
+++ b/paintings.html
@@ -32,8 +32,9 @@
                                   margin-top: 5em;">
         <!-- Image to be enlarged and onclick() function call-->
         <img src=
-"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()" class="btn btn-secondary float-right mr-10000"
+"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()" 
              id="img1" />
+   <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         <!-- Button to reset the Image size -->
         <button onclick="resetImg()">Escape</button>
     </div>
