--- a/paintings.html
+++ b/paintings.html
@@ -30,11 +30,15 @@
 </td></tr></table>
  <div class="container" style="text-align: center; 
                                   margin-top: 5em;">
+    <style> 
+        img { 
+            margin: 100px; /* Adjust the value as needed */ 
+        } 
+    </style> 
         <!-- Image to be enlarged and onclick() function call-->
         <img src=
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()" 
              id="img1" />
-   <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
         <!-- Button to reset the Image size -->
         <button onclick="resetImg()">Escape</button>
     </div>
