--- a/paintings.html
+++ b/paintings.html
@@ -65,7 +65,8 @@
   <br />
   
 <table class="imgtable"><tr><td>
-  <img src= "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
+    <img src= "bird.png" alt="alt text" width="0px" height="0px" />&nbsp;</tr>
+ <img src= "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
 <img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
