--- a/paintings.html
+++ b/paintings.html
@@ -32,7 +32,7 @@
                                   margin-top: 5em;">
     <style> 
         img { 
-            margin: 10000px; /* Adjust the value as needed */ 
+            margin: 100px; /* Adjust the value as needed */ 
         } 
     </style> 
         <!-- Image to be enlarged and onclick() function call-->
@@ -40,7 +40,8 @@
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()" 
              id="img1" />
         <!-- Button to reset the Image size -->
-        <button onclick="resetImg()">Escape</button>
+        < <img src=
+"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" onclick="resetImg()">
     </div>
   
 
@@ -65,7 +66,6 @@
   <br />
   
 <table class="imgtable"><tr><td>
-    <img src= "bird.png" alt="alt text" width="0px" height="0px" />&nbsp;</tr>
  <img src= "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
