--- a/paintings.html
+++ b/paintings.html
@@ -40,8 +40,8 @@
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()" 
              id="img1" />
         <!-- Button to reset the Image size -->
-        < <img src=
-"ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" onclick="resetImg()">
+         <img src=
+"escape.jpg" alt="alt text" width="130px" height="120px" onclick="resetImg()">
     </div>
   
 
