--- a/paintings.html
+++ b/paintings.html
@@ -25,6 +25,10 @@
 
 <p style="font-size:50px;">Art and Craft Done By Me</p>
 <br/></p>
+  <ul>
+  <li><p><i>Click the picture to enlarge then click the escape button beside it to shorten the picture</i>i></p>
+</li>
+  </ul>
   
   
 </td></tr></table>
