--- a/paintings.html
+++ b/paintings.html
@@ -25,13 +25,9 @@
 
 <p style="font-size:50px;">Art and Craft Done By Me</p>
 <br/></p>
-  <ul>
-  <li><p><i>Click the picture to enlarge then click the escape button beside it to shorten the picture</i>i></p>
+<li><p><i>*Click the picture to enlarge then click the escape button beside it to shorten the picture</i></p>
 </li>
-  </ul>
-  
-  
-</td></tr></table>
+  </td></tr></table>
  <div class="container" style="text-align: center; 
                                   margin-top: 5em;">
     <style> 
