--- a/paintings.html
+++ b/paintings.html
@@ -25,8 +25,7 @@
 
 <p style="font-size:50px;">Art and Craft Done By Me</p>
 <br/></p>
-<li><p><i>*Click the picture to enlarge then click the escape button beside it to shorten the picture</i></p>
-</li>
+<p><i>*Click the picture to enlarge then click the escape button beside it to shorten the picture</i></p>
   </td></tr></table>
  <div class="container" style="text-align: center; 
                                   margin-top: 5em;">
