--- a/paintings.html
+++ b/paintings.html
@@ -27,7 +27,7 @@
 <br/></p>
 <p><i>*Click the picture to enlarge then click the escape button beside it to shorten the picture</i></p>
   </td></tr></table>
- <div class="container" style="text-align: center; 
+ <div class="container"; 
                                   margin-top: 5em;">
     <style> 
         img { 
@@ -62,7 +62,7 @@
             img.style.transition = "transform 0.25s ease";
         }
     </script>
-  <br />
+  
   
 <table class="imgtable"><tr><td>
  <img src= "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
