--- a/paintings.html
+++ b/paintings.html
@@ -27,7 +27,7 @@
 <br/></p>
 <p><i>*Click the picture to enlarge then click the escape button beside it to shorten the picture</i></p>
   </td></tr></table>
- <div class="container"; 
+ <div class="container" style="text-align: center; 
                                   margin-top: 5em;">
     <style> 
         img { 
@@ -65,7 +65,6 @@
   
   
 <table class="imgtable"><tr><td>
- <img src= "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
 <img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
 <img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
