--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Email: arinjay <a href="https://www.google.com/search?q=fullstop&client=ubuntu&h
   House no :39, Grand Village, Mattumanda, Palakkad, Kerala, India, Indian Subcontinent, Asia , Earth, Solarsystem, Milkyway, Local Group of Galaxies, Universe, etc...<br>
 Pin Code: 678005</p>
 </li>
-<li><p>I am 12+ years old</p>
+<li><p>I am 12+ years old (My date of birth is 21/9/2011)</p>
 </li>
 <li><p>I study in a school called PM SHRI Kendriya Vidyalaya Kanjikode in class 7C</p>
 </li>
