--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Pin Code: 678005</p>
   
 <h2><p style="background-color:pink;">Other websites and links you might want to visit</p></h2>
 <ul>
-<li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode</a></p>
+<li><p><a href="https://no2palakkad.kvs.ac.in/">Kendriya Vidyalaya Kanjikode (My School)</a></p>
 </li>
 <li><p><a href="https://scratch.mit.edu">Scratch</a> (The place where I made my games and stuff)</p>
 </li>
