--- a/paintings.html
+++ b/paintings.html
@@ -38,7 +38,6 @@
         <img src=
 "ArinjayDasbhadra.jpg" alt="alt text" width="200px" height="150px"             onclick="enlargeImg()"
              id="img1" />
-        <br /><br /><br />
         <!-- Button to reset the Image size -->
         <img src=
           "escape.jpg" alt="alt text" width="130px" height="120px" onclick="resetImg()">
@@ -80,16 +79,16 @@
     <!-- script to set display property -->
     <script>
         // Get the img object using its Id
-        img = document.getElementById("img2");
+        img2 = document.getElementById("img2");
         // Function to increase image size
-        function enlargeImg() {
+        function enlargeImg2() {
             // Set image size to 5 times original
             img.style.transform = "scale(5)";
             // Animation effect
             img.style.transition = "transform 0.25s ease";
         }
         // Function to reset image size
-        function resetImg() {
+        function resetImg2() {
             // Set image size to original
             img.style.transform = "scale(1)";
             img.style.transition = "transform 0.25s ease";
