--- a/bird.html
+++ b/bird.html
@@ -28,14 +28,14 @@
 <p>Physical features<br>
 Flying birds have:<br><br>
 
-lightweight, smooth feathers – this reduces the forces of weight and drag<br>
-a beak, instead of heavy, bony jaws and teeth – this reduces the force of weight<br>
-an enlarged breastbone called a sternum for flight muscle attachment – this helps with the force of thrust<br>
-light bones – a bird’s bones are basically hollow with air sacs and thin, tiny cross pieces to make bones stronger – this reduces the force of weight<br>
-a rigid skeleton to provide firm attachments for powerful flight muscles – this helps with the force of thrust<br>
-a streamlined body – this helps reduce the force of drag<br>
-wings – these enable the force of lift.<br> 
-how does it work:<br>
+1. lightweight, smooth feathers – this reduces the forces of weight and drag<br>
+2. a beak, instead of heavy, bony jaws and teeth – this reduces the force of weight<br>
+3. an enlarged breastbone called a sternum for flight muscle attachment – this helps with the force of thrust<br>
+4. light bones – a bird’s bones are basically hollow with air sacs and thin, tiny cross pieces to make bones stronger – this reduces the force of weight<br>
+5. a rigid skeleton to provide firm attachments for powerful flight muscles – this helps with the force of thrust<br>
+6. a streamlined body – this helps reduce the force of drag<br>
+7. wings – these enable the force of lift.<br> 
+How does it work?:<br>
 Birds' wings flap with an up-and-down motion. This propels them forward. The entire wingspan has to be at the right angle of attack,<br>
   which means the wings have to twist (and do so automatically) with each downward stroke to keep aligned with the direction of travel.<br />
 <iframe width="560" height="315" src="https://www.youtube.com/embed/cgO07y9JIIE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
