--- a/paintings.html
+++ b/paintings.html
@@ -68,17 +68,17 @@
        
         
         <img src=
-"ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="150px" onclick="enlargeImg()" 
+"ArinjayDasbhadra2.jpg" alt="alt text" width="200px" height="150px" onclick="enlargeImg2()" 
              id="img2" />
         <!-- Button to reset the Image size -->
          <img src=
-"esc2.jpg" alt="alt text" width="130px" height="130px" onclick="resetImg()">
+"esc2.jpg" alt="alt text" width="130px" height="130px" onclick="resetImg2()">
     </div>
   
 
     <!-- script to set display property -->
     <script>
-        // Get the img object using its Id
+        // Get the img2 object using its Id
         img2 = document.getElementById("img2");
         // Function to increase image size
         function enlargeImg2() {
