--- a/paintings.html
+++ b/paintings.html
@@ -83,15 +83,15 @@
         // Function to increase image size
         function enlargeImg2() {
             // Set image size to 5 times original
-            img.style.transform = "scale(5)";
+            img2.style.transform = "scale(5)";
             // Animation effect
-            img.style.transition = "transform 0.25s ease";
+            img2.style.transition = "transform 0.25s ease";
         }
         // Function to reset image size
         function resetImg2() {
             // Set image size to original
-            img.style.transform = "scale(1)";
-            img.style.transition = "transform 0.25s ease";
+            img2.style.transform = "scale(1)";
+            img2.style.transition = "transform 0.25s ease";
         }
     </script>
   <br>
