--- a/paintings.html
+++ b/paintings.html
@@ -106,7 +106,7 @@
              id="img3" />
         <!-- Button to reset the Image size -->
          <img src=
-"esc2.jpg" alt="alt text" width="130px" height="130px" onclick="resetImg3()">
+"esc.4.webp" alt="alt text" width="130px" height="130px" onclick="resetImg3()">
     </div>
   
 
@@ -115,14 +115,14 @@
         // Get the img2 object using its Id
         img3 = document.getElementById("img3");
         // Function to increase image size
-        function enlargeImg2() {
+        function enlargeImg3() {
             // Set image size to 5 times original
             img3.style.transform = "scale(5)";
             // Animation effect
             img3.style.transition = "transform 0.25s ease";
         }
         // Function to reset image size
-        function resetImg2() {
+        function resetImg3() {
             // Set image size to original
             img3.style.transform = "scale(1)";
             img3.style.transition = "transform 0.25s ease";
