--- a/paintings.html
+++ b/paintings.html
@@ -3,7 +3,7 @@
 <head>
 <title>Art and Craft</title>
 </head>
-<body style="background-color:Indigo;">
+<body style="background-color:Cyan;">
 <div id="fwtitle">
 <div id="toptitle">
   </div>
