--- a/paintings.html
+++ b/paintings.html
@@ -130,13 +130,45 @@
     </script>
   <br>
 
+   <div class="container" style="text-align: center; 
+                                  margin-top: 5em;">
+       
+        
+        <img src=
+"ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px"  onclick="enlargeImg4()" 
+             id="img4" />
+        <!-- Button to reset the Image size -->
+         <img src=
+"esc.4.webp" alt="alt text" width="140px" height="140px" onclick="resetImg4()">
+    </div>
+  
+
+    <!-- script to set display property -->
+    <script>
+        // Get the img4 object using its Id
+        img4 = document.getElementById("img4");
+        // Function to increase image size
+        function enlargeImg4() {
+            // Set image size to 5 times original
+            img3.style.transform = "scale(5)";
+            // Animation effect
+            img3.style.transition = "transform 0.25s ease";
+        }
+        // Function to reset image size
+        function resetImg4() {
+            // Set image size to original
+            img3.style.transform = "scale(1)";
+            img3.style.transition = "transform 0.25s ease";
+        }
+    </script>
+  <br>
+
 
   
    
   
   
-<table class="imgtable"><tr><td>
-<img src="ArinjayDasbhadra3.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr> 
+<table class="imgtable"><tr><td> 
 <img src="ArinjayDasbhadra4.jpg" alt="alt text" width="200px" height="150px" />&nbsp;</tr>
   <img src="car drawing.jfif" alt="alt text" height="220px" width="150px" />&nbsp;</tr>
   <img src="Mountain.jpg" alt="alt text" width="150" height="220px" />&nbsp;</tr> 
