--- a/oyster.html
+++ b/oyster.html
@@ -3,7 +3,7 @@
 <head>
 <title>How do oysters make pearls</title>
 </head>
-<body style="background-color:#039c70;">
+<body style="background-color:Cyan;">
 <div id="fwtitle">
 <div id="toptitle">
   </div>
