--- a/paintings.html
+++ b/paintings.html
@@ -139,7 +139,7 @@
              id="img4" />
         <!-- Button to reset the Image size -->
          <img src=
-"esc.4.webp" alt="alt text" width="140px" height="140px" onclick="resetImg4()">
+"esc3.jpg" alt="alt text" width="140px" height="140px" onclick="resetImg4()">
     </div>
   
 
@@ -150,15 +150,15 @@
         // Function to increase image size
         function enlargeImg4() {
             // Set image size to 5 times original
-            img3.style.transform = "scale(5)";
+            img4.style.transform = "scale(5)";
             // Animation effect
-            img3.style.transition = "transform 0.25s ease";
+            img4.style.transition = "transform 0.25s ease";
         }
         // Function to reset image size
         function resetImg4() {
             // Set image size to original
-            img3.style.transform = "scale(1)";
-            img3.style.transition = "transform 0.25s ease";
+            img4.style.transform = "scale(1)";
+            img4.style.transition = "transform 0.25s ease";
         }
     </script>
   <br>
