--- a/paintings.html
+++ b/paintings.html
@@ -170,15 +170,15 @@
         <img src=
 "car drawing.jfif" alt="alt text" height="220px" width="150px" onclick="enlargeImg5()" 
              id="img5" />
-        <!-- Button to reset the Image size -->
+        <!-- Image to reset the original Image size -->
          <img src=
-"esc3.jpg" alt="alt text" width="140px" height="140px" onclick="resetImg5()">
+"esc5.png" alt="alt text" width="140px" height="140px" onclick="resetImg5()">
     </div>
   
 
     <!-- script to set display property -->
     <script>
-        // Get the img4 object using its Id
+        // Get the img5 object using its Id
         img5 = document.getElementById("img5");
         // Function to increase image size
         function enlargeImg5() {
