--- a/paintings.html
+++ b/paintings.html
@@ -116,7 +116,7 @@
 <p><i>*Click the picture to enlarge the picture, then click the escape button beside it to shorten the picture</i></p>
   </td></tr></table>
   <br>
-  <img id="myImg" src="img_snow.jpg" alt="Snow" style="width:100%;max-width:300px">
+  <img id="myImg" src="Babuiscool.jpg" alt="Snow" style="width:100%;max-width:300px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
