--- a/paintings.html
+++ b/paintings.html
@@ -32,7 +32,7 @@
   margin: auto;
   display: block;
   width: 80%;
-  max-width: 700px;
+  max-width: 1000px;
 }
 
 /* Caption of Modal Image */
@@ -40,7 +40,7 @@
   margin: auto;
   display: block;
   width: 80%;
-  max-width: 700px;
+  max-width: 1000px;
   text-align: center;
   color: #ccc;
   padding: 10px 0;
@@ -84,7 +84,7 @@
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 1000px){
   .modal-content {
     width: 100%;
   }
@@ -116,7 +116,7 @@
 <p><i>*Click the picture to enlarge the picture, then click the escape button beside it to shorten the picture</i></p>
   </td></tr></table>
   <br>
-  <img id="myImg" src="Arinjay Dasbhadra.jpg" alt="Mountains and a lake<br>(Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
+  <img id="myImg" src="Arinjay Dasbhadra.jpg" alt="Mountains and a lake<br>Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
