--- a/paintings.html
+++ b/paintings.html
@@ -4,16 +4,16 @@
 <title>Art and Craft</title>
   <style>
 
-#myImg {
+#myImg1 {
   border-radius: 10px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#myImg:hover {opacity: 0.7;}
+#myImg1:hover {opacity: 0.7;}
 
 /* The Modal (background) */
-.modal {
+.modal1 {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -28,7 +28,7 @@
 }
 
 /* Modal Content (image) */
-.modal-content {
+.modal-content1 {
   margin: auto;
   display: block;
   width: 80%;
@@ -36,7 +36,7 @@
 }
 
 /* Caption of Modal Image */
-#caption {
+#caption1 {
   margin: auto;
   display: block;
   width: 80%;
@@ -48,25 +48,25 @@
 }
 
 /* Add Animation */
-.modal-content, #caption {  
+.modal-content1, #caption1 {  
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
   animation-duration: 0.6s;
 }
 
-@-webkit-keyframes zoom {
-  from {-webkit-transform:scale(0)} 
-  to {-webkit-transform:scale(1)}
+@-webkit-keyframes1 zoom {
+  from {-webkit-transform1:scale(0)} 
+  to {-webkit-transform1:scale(1)}
 }
 
-@keyframes zoom {
+@keyframes1 zoom {
   from {transform:scale(0)} 
   to {transform:scale(1)}
 }
 
 /* The Close Button */
-.close {
+.close1 {
   position: absolute;
   top: 15px;
   right: 35px;
@@ -76,16 +76,16 @@
   transition: 0.3s;
 }
 
-.close:hover,
-.close:focus {
+.close1:hover,
+.close1:focus {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
 }
 
 /* 100% Image Width on Smaller Screens */
-@media only screen and (max-width: 1000px){
-  .modal-content {
+@media only screen1 and (max-width: 1000px){
+  .modal-content1 {
     width: 100%;
   }
 }
@@ -116,35 +116,35 @@
 <p><i>*Click the picture to enlarge the picture, then click the cross button beside it to shorten the picture</i></p>
   </td></tr></table>
   <br>
-  <img id="myImg" src="Arinjay Dasbhadra.jpg" alt="Mountains and a lake<br>Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
+  <img id="myImg1" src="Arinjay Dasbhadra.jpg" alt="Mountains and a lake<br>Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
 
 <!-- The Modal -->
-<div id="myModal" class="modal">
-  <span class="close">&times;</span>
+<div id="myModal1" class="modal1">
+  <span class="close1">&times;</span>
   <img class="modal-content" id="img01">
-  <div id="caption"></div>
+  <div id="caption1"></div>
 </div>
 
 <script>
 // Get the modal
-var modal = document.getElementById("myModal");
+var modal1 = document.getElementById("myModal1");
 
 // Get the image and insert it inside the modal - use its "alt" text as a caption
-var img = document.getElementById("myImg");
-var modalImg = document.getElementById("img01");
-var captionText = document.getElementById("caption");
+var img1 = document.getElementById("myImg1");
+var modalImg1 = document.getElementById("img01");
+var captionText1 = document.getElementById("caption1");
 img.onclick = function(){
-  modal.style.display = "block";
-  modalImg.src = this.src;
-  captionText.innerHTML = this.alt;
+  modal1.style.display = "block";
+  modalImg1.src = this.src;
+  captionText1.innerHTML = this.alt;
 }
 
 // Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
+var span1 = document.getElementsByClassName("close")[0];
 
 // When the user clicks on <span> (x), close the modal
-span.onclick = function() { 
-  modal.style.display = "none";
+span1.onclick = function() { 
+  modal1.style.display = "none";
 }
 </script>
 
