--- a/paintings.html
+++ b/paintings.html
@@ -4,16 +4,16 @@
 <title>Art and Craft</title>
   <style>
 
-#myImg1 {
+#myImg {
   border-radius: 10px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#myImg1:hover {opacity: 0.7;}
+#myImg:hover {opacity: 0.7;}
 
 /* The Modal (background) */
-.modal1 {
+.modal {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -28,7 +28,7 @@
 }
 
 /* Modal Content (image) */
-.modal-content1 {
+.modal-content {
   margin: auto;
   display: block;
   width: 80%;
@@ -36,7 +36,7 @@
 }
 
 /* Caption of Modal Image */
-#caption1 {
+#caption {
   margin: auto;
   display: block;
   width: 80%;
@@ -48,25 +48,25 @@
 }
 
 /* Add Animation */
-.modal-content1, #caption1 {  
+.modal-content, #caption {  
   -webkit-animation-name: zoom;
   -webkit-animation-duration: 0.6s;
   animation-name: zoom;
   animation-duration: 0.6s;
 }
 
-@-webkit-keyframes1 zoom {
+@-webkit-keyframes zoom {
   from {-webkit-transform1:scale(0)} 
   to {-webkit-transform1:scale(1)}
 }
 
-@keyframes1 zoom {
+@keyframes zoom {
   from {transform:scale(0)} 
   to {transform:scale(1)}
 }
 
 /* The Close Button */
-.close1 {
+.close {
   position: absolute;
   top: 15px;
   right: 35px;
@@ -76,8 +76,8 @@
   transition: 0.3s;
 }
 
-.close1:hover,
-.close1:focus {
+.close:hover,
+.close:focus {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
@@ -85,7 +85,7 @@
 
 /* 100% Image Width on Smaller Screens */
 @media only screen1 and (max-width: 1000px){
-  .modal-content1 {
+  .modal-content {
     width: 100%;
   }
 }
@@ -119,32 +119,32 @@
   <img id="myImg1" src="Arinjay Dasbhadra.jpg" alt="Mountains and a lake<br>Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
 
 <!-- The Modal -->
-<div id="myModal1" class="modal1">
-  <span class="close1">&times;</span>
+<div id="myModal" class="modal">
+  <span class="close">&times;</span>
   <img class="modal-content" id="img01">
-  <div id="caption1"></div>
+  <div id="caption"></div>
 </div>
 
 <script>
 // Get the modal
-var modal1 = document.getElementById("myModal1");
+var modal = document.getElementById("myModal1");
 
 // Get the image and insert it inside the modal - use its "alt" text as a caption
-var img1 = document.getElementById("myImg1");
-var modalImg1 = document.getElementById("img01");
-var captionText1 = document.getElementById("caption1");
+var img = document.getElementById("myImg1");
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption1");
 img.onclick = function(){
-  modal1.style.display = "block";
-  modalImg1.src = this.src;
-  captionText1.innerHTML = this.alt;
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
 }
 
 // Get the <span> element that closes the modal
-var span1 = document.getElementsByClassName("close")[0];
+var span = document.getElementsByClassName("close")[0];
 
 // When the user clicks on <span> (x), close the modal
-span1.onclick = function() { 
-  modal1.style.display = "none";
+span.onclick = function() { 
+  modal.style.display = "none";
 }
 </script>
 
