--- a/paintings.html
+++ b/paintings.html
@@ -127,12 +127,12 @@
 
 <script>
 // Get the modal
-var modal = document.getElementById("myModal1");
+var modal = document.getElementById("myModal");
 
 // Get the image and insert it inside the modal - use its "alt" text as a caption
-var img = document.getElementById("myImg1");
+var img = document.getElementById("myImg");
 var modalImg = document.getElementById("img01");
-var captionText = document.getElementById("caption1");
+var captionText = document.getElementById("caption");
 img.onclick = function(){
   modal.style.display = "block";
   modalImg.src = this.src;
