--- a/paintings.html
+++ b/paintings.html
@@ -722,7 +722,7 @@ span.onclick = function() {
 }
 </script>
 
-    <img id="myImg6" src="Mountain.jpg" alt="Mountains and a lake<br>Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
+    <img id="myImg6" src="Mountain.jpg" alt="Snowy Mountains<br>Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
