--- a/paintings.html
+++ b/paintings.html
@@ -11,7 +11,7 @@
   transition: 0.3s;
 }
 
-#myImg:hover  {
+#myImg:hover  {opacity: 0.7;
   /* Start the shake animation and make the animation last for 0.5 seconds */
   animation: shake 0.5s;
 
