--- a/paintings.html
+++ b/paintings.html
@@ -912,13 +912,13 @@
 
   <style>
 
-#myImg2 {
+#myImg11 {
   border-radius: 20px;
   cursor: pointer;
   transition: 0.3s;
 }
 
-#myImg2:hover {opacity: 0.7;}
+#myImg11:hover {opacity: 0.7;}
 
 /* The Modal (background) */
 .modal {
@@ -1329,6 +1329,38 @@ var modal = document.getElementById("myModal");
 
 // Get the image and insert it inside the modal - use its "alt" text as a caption
 var img = document.getElementById("myImg10");
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() { 
+  modal.style.display = "none";
+}
+</script>
+
+    <img id="myImg11" src="Sun Scenary.jpg" alt="Sunset Scenary<br>Please continue looking at my other arts and craft" style="width:100%;max-width:200px">
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+  <span class="close">&times;</span>
+  <img class="modal-content" id="img01">
+  <div id="caption"></div>
+</div>
+
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById("myImg11");
 var modalImg = document.getElementById("img01");
 var captionText = document.getElementById("caption");
 img.onclick = function(){
